Deployment_files/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app
  labels:
    app: redis
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis                 
        image: nasalane/redis:alpine                      
        ports:
        - containerPort: 6379
