Deployment_files/django-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  annotations:
    argocd.argoproj.io/sync-wave: "8"
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
