Deployment_files/postgres-deployment.yaml
apiVersion: apps/v1      
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: nasalane/postgres:15.4
        ports:
        - containerPort: 5432         
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 5432               
      targetPort: 5432
      nodePort: 31000
