Deployment_files/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432               
      targetPort: 5432
