Deployment_files/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-app 
  ports:
    - protocol: TCP
      port: 6379                  
      targetPort: 6379
