Deployment_files/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: webapp-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "9"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: django-app-service 
          servicePort: 8000
